[gd_scene load_steps=7 format=3 uid="uid://cmlr1byd61u4c"]

[ext_resource type="PackedScene" uid="uid://diy5r65nsqwde" path="res://scenes/game/world/world.tscn" id="1_2vlba"]
[ext_resource type="Script" path="res://scenes/main_game.gd" id="1_087lc"]
[ext_resource type="PackedScene" uid="uid://bn8p1gihlkk27" path="res://scenes/game/stats/stats-scene.tscn" id="2_vkcxy"]
[ext_resource type="PackedScene" uid="uid://7huukrp8bcut" path="res://scenes/game/store/store.tscn" id="3_vkcxy"]
[ext_resource type="Script" path="res://scenes/game/stats/stats_scene.gd" id="4_bxljq"]
[ext_resource type="Texture2D" uid="uid://blkguohv5lvkq" path="res://assets/images/newsletter/headlines/close_hovered.png" id="6_w232t"]

[node name="MainGame" type="Node"]
script = ExtResource("1_087lc")

[node name="World" parent="." instance=ExtResource("1_2vlba")]

[node name="StatsScene" parent="World" instance=ExtResource("2_vkcxy")]
size_flags_horizontal = 8
script = ExtResource("4_bxljq")

[node name="Store" parent="." instance=ExtResource("3_vkcxy")]

[node name="ColorRect" parent="Store" index="0"]
offset_left = 30.0
offset_top = 30.0
offset_right = -160.0
offset_bottom = -30.0

[node name="HBoxContainer" parent="Store/ColorRect" index="0"]
offset_right = 1.0

[node name="CloseShop" parent="Store/ColorRect/HBoxContainer" index="0"]
texture_pressed = ExtResource("6_w232t")
texture_hover = ExtResource("6_w232t")

[node name="VBoxContainer" parent="Store/ColorRect/HBoxContainer" index="1"]
theme_override_constants/separation = 14

[connection signal="shop_closed" from="Store" to="." method="_on_store_shop_closed"]
[connection signal="update_stats" from="Store" to="." method="_on_store_update_stats"]

[editable path="Store"]
